k8s/logicway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logicway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logicway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: logicway
    spec:
      containers:
        - name: logicway
          image: ghcr.io/logicwayteam/logicway:latest
          ports:
            - containerPort: 8000
