k8s/route-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: route-engine
  template:
    metadata:
      labels:
        app: route-engine
    spec:
      containers:
        - name: route-engine
          image: ghcr.io/logicwayteam/route-engine:001
          ports:
            - containerPort: 8001
