k8s/logicway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logicway
spec:
  selector:
    app: logicway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001
  type: NodePort
