k8s/route-engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: route-engine
spec:
  selector:
    app: route-engine
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
