k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: logicway-k8s.taile241c6.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logicway
                port:
                  number: 8000
