k8s/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: test
  annotations:
    tailscale.com/hostname: logicway-test
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /logicway
        pathType: Prefix
        backend:
          service:
            name: logicway
            port:
              number: 8000
      - path: /route-engine
        pathType: Prefix
        backend:
          service:
            name: route-engine
            port:
              number: 8001
